<resources>
    <string name="app_name">android_review04_baek08102</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="print_score">점수 출력</string>
    <string name="math_score">수학 점수</string>
    <string name="english_score">영어 점수</string>
    <string name="korean_score">국어 점수</string>
    <string name="grade">학년</string>
    <string name="name">이름</string>
</resources>