<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/sub1_toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#deb887"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:titleCentered="true"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sub1_textInputLayout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            app:counterEnabled="true"
            app:counterMaxLength="5"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sub1_editText_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/name"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sub1_textInputLayout_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sub1_editText_grade"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/grade"
                android:inputType="number"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sub1_textInputLayout_koreanScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:errorEnabled="true"
            app:endIconMode="clear_text"
            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sub1_editText_koreanScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/korean_score"
                android:inputType="numberDecimal"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sub1_textInputLayout_englishScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
            app:hintEnabled="false"
            app:hintAnimationEnabled="false"
            app:errorEnabled="true"
            app:endIconMode="clear_text"

            >
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sub1_editText_englishScore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/english_score"
                android:inputType="numberDecimal"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sub1_textInputLayout_mathScore"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.Material3.TextInputEditText.OutlinedBox"
        app:hintEnabled="false"
        app:hintAnimationEnabled="false"
        app:errorEnabled="true"
        app:endIconMode="clear_text"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sub1_editText_mathScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/math_score"
            android:inputType="numberDecimal"
            />
    </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>
</LinearLayout>