<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/sub3_toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#deb887"
        app:navigationIcon="@drawable/arrow_back_24px"
        app:titleCentered="true"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        >

        <TextView
            android:id="@+id/sub3_textView_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/name"
            />
        <TextView
            android:id="@+id/sub3_textView_grade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/grade"
            />

        <TextView
            android:id="@+id/sub3_textView_koreanScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/print_score"
            />
        <TextView
            android:id="@+id/sub3_textView_englishScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/print_score"
            />
        <TextView
            android:id="@+id/sub3_textView_mathScore"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/print_score"
            />

        <TextView
            android:id="@+id/sub3_textView_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="16sp"
            android:text="@string/print_score"
            />
        <TextView
            android:id="@+id/sub3_textView_average"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:text="@string/print_score"
            />
    </LinearLayout>
</LinearLayout>